Using XMaterial#get()